[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/wwise/runtime/nodes/ak_bank.gd" type="Script" id=1]
[ext_resource path="res://addons/wwise/runtime/nodes/ak_event.gd" type="Script" id=2]
[ext_resource path="res://addons/wwise/runtime/nodes/ak_listener.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Experimental/Tomy/akstateTest.gd" type="Script" id=4]
[ext_resource path="res://Themes/TitleFont.tres" type="DynamicFont" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -277.5
margin_top = 50.0
margin_right = 277.5
margin_bottom = 131.0
custom_fonts/font = ExtResource( 5 )
text = "Wwise states test"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.5
margin_top = -46.0
margin_right = 28.5
margin_bottom = 46.0
custom_constants/separation = 24

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 57.0
margin_bottom = 20.0
text = "Menu"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 57.0
margin_bottom = 64.0
text = "Game"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 57.0
margin_bottom = 108.0
text = "Credits"

[node name="Button4" type="Button" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 57.0
margin_bottom = 152.0
text = "Outro"

[node name="AkBank" type="Node" parent="."]
script = ExtResource( 1 )
bank = {
"Id": 1509027703,
"Name": "KSCOPEMAIN"
}
load_on = 3

[node name="AkListener" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="AkEvent" type="Spatial" parent="."]
script = ExtResource( 2 )
event = {
"Id": 1785415464,
"Name": "MENU LOADED"
}
trigger_on = 3

[node name="AkEvent2" type="Spatial" parent="."]
script = ExtResource( 2 )
event = {
"Id": 1001937282,
"Name": "LEVEL1 LOADED"
}
trigger_on = 3

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
